# Stilltrying

./: .replit  autocomplete.py  command_hash.txt  database.py  debug_leaderboard_data.py  debug_parser_logic.py  debug_server_7020.py  discord_blocker.py  discord_override.py  fix_discord_path.py  fix_imports_in_main.py  fix_rate_limits.py  fix_server_7020.py  force_pycord.py  full_csv_analysis.py  leaderboards_fixed.py  linking.py  main.py  parsers.py  processed_guilds.txt  pycord_enforcer.py  pyproject.toml  run_bot.py  simple_discord_fix.py  switch_to_pycord.py  test_log_improvements.py  test_parser.py  test_player_lifecycle.py
attached_assets/: .replit  2025.05.15-00.00.00.csv  Clean_Start_Init.md  __init__.py  admin_channels.py  command_hash.txt  create_pycord_module.py  embed_progress.md  embed_test.py  enforce_pycord.py  file_discovery.py  fix_discord_dependencies.py  fix_imports.py  fix_pycord.py  fix_pycord_imports.py  historical_parser.py  patch_discord.py  processed_guilds.txt  pyproject.toml  simple_test.py  test_database_isolation.py  test_log_parser.py
bot/: killfeed_parser.py  log_parser.py  sftp_client.py
bot/cogs/: admin_channels.py  autocomplete.py  bounties.py  core.py  economy.py  embed_test.py  factions.py  gambling.py  leaderboards.py  leaderboards_fixed.py  linking.py  premium.py  stats.py
bot/utils/: embed_factory.py
