
[tool.poetry]
name = "emerald-killfeed"
version = "0.1.0"
description = "Discord bot for Deadside PvP tracking"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "2.6.1"
motor = "^3.3.2"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
asyncssh = "^2.14.2"
psutil = "^5.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
